# MeowPot

./: .gitignore  README.md  config.json  main.py  main.qml  pyproject.toml  subtitle_parser.py
